# IDS706_Mini_PJT8

./: Cargo.toml  Makefile  README.md  cost.db  main.py  query_log.md  requirements.txt  test_main.py
.github/workflows/: cicd.yml  py_ci.yml  pytests.yml  rs_ci.yml
mylib/: extract.py  lib.py  query.py  transform_load.py
src/: main.rs
