[package]
name = "mini_project8_jiwon_rust"
version = "0.1.0"
authors = ["Jiwon Shin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rusqlite = "0.29.0"
statrs = "0.16.0"
reqwest = { version = "0.11", features = ["blocking"] }
sys-info = "0.9.1"

[dev-dependencies]
pretty_assertions = "1.4.0"